policies/aws/CoreCAPI.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: aws-core-capi-policy
spec:
  background: false
  rules:
  - name: kubeadmcontrolplane-disks
    match:
      resources:
        kinds:
        - controlplane.cluster.x-k8s.io/v1alpha3/KubeadmControlPlane
        - controlplane.cluster.x-k8s.io/v1alpha4/KubeadmControlPlane
        selector:
          matchLabels:
            cluster.x-k8s.io/watch-filter: capi
    mutate:
      patchesJson6902: |-
        - path: "/spec/kubeadmConfigSpec/files/-"
          op: add
          value: { "content": "IyEvYmluL3NoCiMgY2hlY2sgZm9yIE5WTUUgZGlza3MKaWYgWyAiYGxzYmxrIHwgZ3JlcCBudm1lIHwgd2MgLWxgIiAtZ2UgNCBdOyB0aGVuCglFVENEX0RJU0s9Ii9kZXYvbnZtZTFuMSIKCUNPTlRBSU5FUkRfRElTSz0iL2Rldi9udm1lMm4xIgoJS1VCRUxFVF9ESVNLPSIvZGV2L252bWUzbjEiCgllY2hvIGZvdW5kIG52bWUgRElTS3MKZWxzZQoJRVRDRF9ESVNLPSIvZGV2L3h2ZGMiCiAgICAgICAgQ09OVEFJTkVSRF9ESVNLPSIvZGV2L3h2ZGQiCiAgICAgICAgS1VCRUxFVF9ESVNLPSIvZGV2L3h2ZGUiCmZpCgojIGluaXQgZXRjZCBkaXNrCm1rZnMueGZzICRFVENEX0RJU0sKbWtkaXIgLXAgL3Zhci9saWIvZXRjZ [...]
        - path: "/spec/kubeadmConfigSpec/preKubeadmCommands/-1"
          op: add
          value: 
          -  "/bin/sh /opt/init-disks.sh"
